--- a/src/CustomerOrder/CustomerBundle/Resources/config/routing.yml
+++ b/src/CustomerOrder/CustomerBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 customer_order_customer_homepage:
-    path:     /hello/{name}
+    path:     /
     defaults: { _controller: CustomerOrderCustomerBundle:Default:index }
